Converted to using the IEEE Standard reference section and cleaned up a bunch of the references.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -280,7 +280,7 @@
 	Date-Modified = {2014-03-01 01:30:10 +0000},
 	Journal = {Studies in Intelligence},
 	Number = {4},
-	Title = {Using Prediction Markets to Enhance US Intelligence Capabilities: A ``Standard \& Poors 500 Index'' for Intelligence},
+	Title = {Using Prediction Markets to Enhance US Intelligence Capabilities: A ``{S}tandard \& {P}oors 500 Index'' for Intelligence},
 	Volume = {50},
 	Year = {2006},
 	Bdsk-Url-1 = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/csi-studies/studies/vol50no4/using-prediction-markets-to-enhance-us-intelligence-capabilities.html}}
@@ -597,7 +597,7 @@
                Santiago Zanella B{\'{e}}guelin},
   title     = {Formal Verification of Smart Contracts: Short Paper},
   booktitle = {Proceedings of the 2016 {ACM} Workshop on Programming Languages and
-               Analysis for Security, PLAS@CCS 2016, Vienna, Austria, October 24,
+               Analysis for Security, PLAS@ 2016, Vienna, Austria, October 24,
                2016},
   pages     = {91--96},
   year      = {2016},
@@ -1137,12 +1137,19 @@ Scalable off-chain instant payments},
 }
 
 @InProceedings{Gervais16,
-  author       = {Gervais, Arthur and Karame, Ghassan O. and W{\"u}st, Karl and Glykantzis, Vasileios and Ritzdorf, Hubert and Capkun, Srdjan},
-  title        = {On the security and performance of proof of work blockchains},
-  booktitle    = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
-  year         = {2016},
-  organization = {ACM},
-  pages        = {3--16},
+ author = {Gervais, Arthur and Karame, Ghassan O. and W\"{u}st, Karl and Glykantzis, Vasileios and Ritzdorf, Hubert and Capkun, Srdjan},
+title = {On the Security and Performance of Proof of Work Blockchains},
+booktitle = {Proceedings of the 2016 ACM SIGSAC Conference on Computer and Communications Security},
+year = {2016},
+isbn = {978-1-4503-4139-4},
+location = {Vienna, Austria},
+pages = {3--16},
+numpages = {14},
+url = {http://doi.acm.org/10.1145/2976749.2978341},
+doi = {10.1145/2976749.2978341},
+acmid = {2978341},
+publisher = {ACM},
+keywords = {bitcoin, blockchain, performance, security},
 }
 
 @InProceedings{Croman16,
@@ -1195,6 +1202,7 @@ Scalable off-chain instant payments},
                   Jonathan Katz and
                   Elaine Shi",
   title =        "Nonoutsourceable Scratch-Off Puzzles to Discourage Bitcoin Mining Coalitions",
+   booktitle = {Proceedings of the 22Nd ACM SIGSAC Conference on Computer and Communications Security},
   pages =        "680--691",
   editor =       ccs15ed,
   booktitle =    ccs15name,
@@ -1232,8 +1240,9 @@ Scalable off-chain instant payments},
 @inproceedings{CCS:LinNof18,
   author	= {Yehuda Lindell and
   		Ariel Nof},
-  title = 	{Fast Secure Multiparty ECDSA with Practical Distributed Key Generation and Applications to Cryptocurrency Custody},
-  booktitle = 	{CCS},
+  title = 	{Fast Secure Multiparty {ECDSA} with Practical Distributed Key Generation and Applications to Cryptocurrency Custody},
+   pages = {1837--1854},
+ booktitle = {Proceedings of the 2018 ACM SIGSAC Conference on Computer and Communications Security},
   year = 	{2018}
 }
 
@@ -1259,11 +1268,11 @@ Scalable off-chain instant payments},
   title =        "Threshold Signatures, Multisignatures and Blind Signatures Based on the Gap-{Diffie}-{Hellman}-Group Signature Scheme",
   pages =        "31--46",
   editor =       pkc03ed,
-  booktitle =    pkc03name,
+  booktitle="Public Key Cryptography --- PKC 2003",
   volume =       pkc03vol,
   address =      pkc03addr,
   month =        pkc03month,
-  publisher =    pkcpub,
+  publisher="Springer Berlin Heidelberg",
   series =       mylncs,
   year =         2003,
 }
@@ -1274,6 +1283,7 @@ Scalable off-chain instant payments},
                   Hugo Krawczyk and
                   Tal Rabin",
   title =        "Robust Threshold {DSS} Signatures",
+    booktitle="Information and Computation",
   pages =        "354--371",
   editor =       eurocrypt96ed,
   booktitle =    eurocrypt96name,
@@ -1290,11 +1300,11 @@ Scalable off-chain instant payments},
   title =        "Practical Threshold Signatures",
   pages =        "207--220",
   editor =       eurocrypt00ed,
-  booktitle =    eurocrypt00name,
+  booktitle="Advances in Cryptology --- EUROCRYPT 2000",
   volume =       eurocrypt00vol,
-  address =      eurocrypt00addr,
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
   month =        eurocrypt00month,
-  publisher =    eurocryptpub,
   series =       mylncs,
   year =         2000,
 }
@@ -1302,7 +1312,7 @@ Scalable off-chain instant payments},
 @inproceedings{USS:WhiTyg99,
   author    = {Alma Whitten and
                J. Doug Tygar},
-  title     = {Why Johnny Can't Encrypt: {A} Usability Evaluation of {PGP} 5.0},
+  title     = {Why {J}ohnny Can't Encrypt: {A} Usability Evaluation of {PGP} 5.0},
   booktitle = {Proceedings of the 8th {USENIX} Security Symposium, Washington, DC,
                USA, August 23-26, 1999},
   year      = {1999},
@@ -1316,12 +1326,13 @@ Scalable off-chain instant payments},
 @misc{back1997partial,
 	title={A partial hash collision based postage scheme},
 	author={Back, Adam},
+	howpublished = {Email},	
 	year={1997}
 }
 
 @misc{garay2018consensus,
 	author = {Juan Garay and Aggelos Kiayias},
-	title = {SoK: A Consensus Taxonomy in the Blockchain Era},
+	title = {So{K}: A Consensus Taxonomy in the Blockchain Era},
 	howpublished = {Cryptology ePrint Archive, Report 2018/754},
 	year = {2018},
 	note = {\url{https://eprint.iacr.org/2018/754}},
@@ -1440,7 +1451,7 @@ Scalable off-chain instant payments},
 }
 
 @article{ruoti2015johnny,
-	title={Why Johnny still, still can't encrypt: Evaluating the usability of a modern PGP client},
+	title={Why {J}ohnny still, still can't encrypt: Evaluating the usability of a modern PGP client},
 	author={Ruoti, Scott and Andersen, Jeff and Zappala, Daniel and Seamons, Kent},
 	journal={arXiv preprint arXiv:1510.08555},
 	year={2015}
