--- a/paper/main.tex
+++ b/paper/main.tex
@@ -82,8 +82,10 @@
 
 %====================================================================
 
-\bibliographystyle{abbrv}
-\bibliography{bib/bitcoin}
+%\bibliographystyle{abbrv}
+%\bibliography{bib/bitcoin}
+\bibliographystyle{IEEEtran}
+\bibliography{IEEEabrv,bib/bitcoin}
 \nocite{*}
 
 %====================================================================
