Tried to use the standard IEEE CS/ACM keywords

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -8,5 +8,5 @@ Additionally, we identify open research questions related to Blockchain technolo
 \end{abstract}
 
 \begin{IEEEkeywords}
-Blockchain technology, decentralized database, shared governance, provenance, auditability, resilience.
+Blockchain, use cases, decentralized database, governance, data provenance, technology audits, resilience.
 \end{IEEEkeywords}
