--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -35,6 +35,9 @@ If we modify the system to allow monitors to play this role, they have become co
 
 \subsection{Is Blockchain a Good Fit for My Project?}
 \label{sec:should-i-use-it}
+
+% Jeremy: Internalize and cite the paper: What Blockchain Alternative Do You Need?
+
 In Figure~\ref{fig:blockchainFlowchart}, systems increase in complexity and overhead as they move down or to the right.
 As such, it is usually preferable to select the first system in the flowchart that meets all of the desired properties.
 While Blockchain provides the most functionality, it is also the most complex of the related systems.
